fixed menu positioning in portfolio.html and added js script for scrollbar

--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -138,6 +138,7 @@
 }
 
 .mobile-menu {
+  z-index: 1;
   position: fixed;
   width: 100vw;
   height: 100vh;
